test/core/errors/identifiers_error/zs/clashing_identifiers/subtype_subtype_name_conflict_error.zs
package clashing_identifiers.subtype_subtype_name_conflict_error;

subtype int32 Test;

subtype string Test; // Test is already defined!
